_includes/manuals/1.5/3.5.6_cli.md
The Command Line Interface is based on the [hammer](https://github.com/theforeman/hammer-cli) framework. The foreman-related commands are defined in plugin ```hammer_cli_foreman```

#### Format and locations

Configuration is loaded from a set of directories in this order:

 - ```./config/hammer/``` (config dir in CWD)
 - ```/etc/hammer/```.
 - ```~/.hammer/```
 - custom location specified on command line - ```-c CONF_FILE_PATH```

In each of these directories hammer tries to load `cli_config.yml` and anything in the `cli.modules.d` subdirectory which is the recommended location for configuration of hammer modules.

Later directories and files have precedence if they redefine the same option. Files from cli.modules.d are loaded in alphabetical order.

Hammer uses yaml formatting for its configuration. The config file template is contained in the hammer_cli gem.

 ```bash
gem contents hammer_cli|grep cli_config.template.yml
```
and can be copied to one of the locations above and changed as needed. The packaged version of hammer copies the template to /etc for you.


#### Plugins

Plugins are disabled by default. You have to edit the config file and enable them manually under ```modules``` option, as can be seen in the sample config below.

Plugin specific configuration should be nested under plugin's name.

#### Options

 - ```:log_dir: <path>``` - directory where the logs are stored. The default is ```/var/log/hammer/``` and the log file is named ```hammer.log```
 - ```:log_level: <level>``` - logging level. One of ```debug```, ```info```, ```warning```, ```error```, ```fatal```
 - ```:log_owner: <owner>``` - logfile owner
 - ```:log_group: <group>``` - logfile group
 - ```:log_size: 1048576``` - size in bytes, when exceeded the log rotates. Default is 1MB
 - ```:watch_plain: false``` - turn on/off syntax highlighting of data being logged in debug mode

#### Sample config

{% highlight yaml %}
:modules:
    - hammer_cli_foreman

:foreman:
    :host: 'https://localhost/'
    :username: 'admin'
    :password: 'changeme'

:log_dir: '/var/log/foreman/'
:log_level: 'debug'
{% endhighlight %}
